--- a/src/column/column.block.scss
+++ b/src/column/column.block.scss
@@ -1,16 +1,8 @@
 .Column {
-    box-sizing: border-box;
+    overflow: hidden;
+    padding: $gutter-width;
+    padding-bottom: $gutter-width * 2;
+    padding-top: 0;
     flex: 1;
-    margin: 0 $gutter-width;
-    margin-bottom: $gutter-width * 2;
-    flex-basis: 100%;
-
-    @media (min-width: $breakpoint-md) {
-        margin-bottom: 0;
-        flex-basis: auto;
-    }
-
-    @if $debug {
-        border: 1px solid green;
-    }
+    position: relative;
 }
