--- a/src/container/container.block.scss
+++ b/src/container/container.block.scss
@@ -1,9 +1,6 @@
 .Container {
-    box-sizing: border-box;
-    margin: 0 auto;
     max-width: $container-width;
-
-    @if $debug {
-        border: 1px solid red;
-    }
+    margin: 0 auto;
+    overflow: hidden;
+    position: relative;
 }
