--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,6 +1,4 @@
-$debug: false !default;
-
-$container-width: 90rem !default;
+$container-width: 60rem !default;
 $gutter-width: 1rem !default;
 $column-count: 12 !default;
 
@@ -8,7 +6,7 @@ $quater: (100 / 4) + 0%;
 $half: (100 / 2) + 0%;
 $third: (100 / 3) + 0%;
 
-$breakpoint-sm: 544px;
-$breakpoint-md: 768px;
-$breakpoint-lg: 992px;
-$breakpoint-xl: 1200px;
+$viewport-sm: 544px !default;
+$viewport-md: 768px !default;
+$viewport-lg: 992px !default;
+$viewport-xl: 1200px !default;
