--- a/src/column/index.scss
+++ b/src/column/index.scss
@@ -2,3 +2,4 @@
 @import 'column.named.size.modifiers.scss';
 @import 'column.size.modifiers.scss';
 @import 'column.typography.modifiers.scss';
+@import 'column.visibility.modifiers.scss';
