--- a/src/row/row.alignment.modifiers.scss
+++ b/src/row/row.alignment.modifiers.scss
@@ -1,4 +1,4 @@
-.Row {
+.Layout__row {
     // Vertically align all columns to the top of the row.
     @at-root &--align-top {
         align-items: flex-start;
