--- a/src/zeus.scss
+++ b/src/zeus.scss
@@ -8,6 +8,6 @@
 @import 'variables.scss';
 
 // Components.
-@import 'container/index.scss';
+@import 'layout/index.scss';
 @import 'row/index.scss';
 @import 'column/index.scss';
