--- a/sass/code.scss
+++ b/sass/code.scss
@@ -1,3 +1,11 @@
 .Code {
-    //
+    background-color: rgb(245, 241, 218);
+    color: rgb(187, 78, 49);
+    font-family: 'Roboto Mono', ;
+    font-weight: 400;
+    border: 1px solid rgb(195, 187, 135);
+    border-radius: 5px;
+    font-size: 0.8rem;
+    padding: 2px 5px;
+    letter-spacing: 1px;
 }
