--- a/sass/index.scss
+++ b/sass/index.scss
@@ -5,6 +5,9 @@
 @import 'examples.scss';
 @import 'slice.scss';
 @import 'code.scss';
+@import 'paragraph.scss';
+@import 'link.scss';
+@import 'pre.scss';
 
 body {
     padding: 0;
