--- a/src/column/index.scss
+++ b/src/column/index.scss
@@ -3,3 +3,4 @@
 @import 'column.size.modifiers.scss';
 @import 'column.typography.modifiers.scss';
 @import 'column.visibility.modifiers.scss';
+@import 'column.offset.modifiers.scss';
