--- a/sass/hero.scss
+++ b/sass/hero.scss
@@ -14,6 +14,7 @@
         align-items: center;
         flex-direction: column;
         justify-content: center;
+        text-align: center;
     }
 
     @at-root &__icon {
